2008-11-10  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac: Version is 3.10-4

	* vm-display-X11/sqUnixXdnd.c (dndOutMotion, updateCursor): Handle
	cursor changes during drag and drop.

	* vm-display-X11/sqUnixX11.c (debugVisual): Make conditional on
	DEBUG_VISUAL.
	(sendSelection): Ignore request if it came from drag and drop.
	(getSelectionFrom): Translate LF -> CR in incoming text
	selections.
	(xkeysym2ucs4): OLPC 'view source' key generates 'Cmd-,'.
	(x2sqModifier): LOCK reverses the meaning of SHIFT.
	(initWindow): Try 24- and 16-bit visuals before 32-bit visuals to
	avoid compositing problems.  Accept default visual immediately if
	it is 24- or 16-bit.
	(display_ioSetCursorWithMaskBig, display_ioSetCursorARGB): Add big
	cursor support.

	* plugins/LocalePlugin/sqUnixLocale.c: Fix handling of daylight
	savings time and offset from UTC.

	* plugins/DropPlugin/sqUnixDragDrop.c: Declare prototypes up
	front, and other cosmetic changes.

2008-11-03  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/plugins/OggPlugin: added sqOgg.c, OggPlugin.h
	* src/plugins/GStreamerPlugin: added squeakAudioVideoPipeline
	  SignalInterface.[ch]

2008-05-09  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac: Version is 3.10-3.

	* platforms/unix/src: Regenerate all with 32-/64-bit clean patches
	from Dave Lewis.

2008-04-29  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac (CFLAGS): Add --hash-style option to
	configure.

	* vm-display-X11/sqUnixX11.c (xkeysym2ucs4): Translate
	XF86XK_Start to 'ALT-,'.

2008-04-21  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac: Version is 3.10-2.

	* vm-sound-ALSA/sqUnixSoundALSA.c: Add snd_GetSwitch, snd_SetSwitch,
	snd_SetDevice.

	* vm-display-X11/sqUnixXdnd.c (display_dndOutAcceptedType): Add
	support for display_dndOutSend, display_dndOutAcceptedType.
